@@ -8,6 +8,8 @@ Version 6.4.20
   - CID3Tag speichert Text-Tags nun grundsätzlich in UTF-16LE
   - Neue Funktionen: XmlEscape und XMLUnEscape
   - Neue Klasse: PythonHelper
+  - Address-Parameter der HexDump-Funktionen ist nun als "const void *"
+    deklariert
 
 Version 6.4.19 vom 16.02.2014	(SVN-Tag: REL_6_4_19)
   - CBinary hat Malloc- und Calloc-Funktion bekommen,
